--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,12 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 default: &default
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   pool: 5
-  username: root
-  password: "vaib8909"
-  socket: /var/run/mysqld/mysqld.sock
+  #username: root
+  #password: "vaib8909"
+  #socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: db_production
+  database: manaccdb_prod
   username: db
   password: <%= ENV['DB_DATABASE_PASSWORD'] %>
